--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-filebeat_url: "https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-5.1.1-amd64.deb"
+filebeat_url: "https://download.elastic.co/beats/filebeat/filebeat_1.3.0_amd64.deb"
 filebeat_pkg_name: filebeat
 filebeat_yml_src: "files/filebeat.yml"
 filebeat_yml_dest: "/etc/filebeat/filebeat.yml"
