--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,8 +18,8 @@
 
 - name: Copy filebeat.yml
   copy:
-    src: {{ filebeat_yml_src }}
-    dest: {{ filebeat_yml_dest }}
+    src: "{{ filebeat_yml_src }}"
+    dest: "{{ filebeat_yml_dest }}"
     sudo: yes
     notify:
       - restart filebeat
